# qtthreadmessagedispatcher

./: CMakeLists.txt  README.md
cmake/: add_msvc_precompiled_header.cmake  configure_msvc_runtime.cmake
include/: qtthreadmessagedispatcher.h
qtthreadmessagedispatcher/: CMakeLists.txt  common_macro_helpers.h  delegate.cpp  delegate.h  irequest.h  iresponse.h  message.cpp  message_queue.cpp  message_queue.h  meta_helpers.h  named_thread.cpp  requester.h  requester_wrapper.h  stdafx.h  thread_manager.cpp  thread_manager.h
src/: CMakeLists.txt  handler_registry.cpp  handler_registry.h  message.h  named_thread.h  requester.cpp  thread_message_dispatcher.cpp  thread_message_dispatcher.h
